- Added 'PermissionFunctions' extension
- Added 'NamespaceFunctions' extension
- Added 'StubManager' extension
- Fixed small bug (non core, just when Special:Version is viewed in a particular case) in RawRight
- Added 'EmailLog' extension
- Added 'UserSettingsChanged' hook in User.php (used for logging functionality)
- Adjusted 'Log/emaillog' browse right for '*' group
- Added 'ReCaptcha' plug-in -- requires customization to the target site where BizzWiki is deployed.
==========
REL1_10_8: (released ...)
- Adjusted ViewsourceRight: accomodate more PHP versions (no functional change)
- Adjusted FileSystemSyntaxColoring : accomodate more PHP versions (no functional change)
- Adjusted ShowRedirectPageText: accomodate more PHP versions (no functional change)
- Adjusted SidebarEx: accomodate more PHP versions (no functional change)
- Adjusted AddScriptCss: accomodate more PHP versions (no functional change)
- Adjusted PageFunctions: accomodate more PHP versions (no functional change)
- HierarchicalNamespacePermissions: added page level restrictions enforcement
- Added 'PageRestrictions' extension: adds 'read' right enforcement at the page level etc.
- Added 'disable' command in ParserPhase2 (addresses documentation case in NS_FILESYSTEM) (!)
- Added 'WatchLog' extension
- Added 'RecentChangesManager' extension
- Adapter 'Job::factory' method to receive custom jobs as per MW1.11
- Added 'skipcaptcha' right support
- Integrated MW1.11 API
- Added API to rights management process (new namespace NS_API)
- Updated 'hnpClass' to account for API
- Added 'FetchPartnerRC' extension (part of Replication functionality which is ongoing)
- Added auto-detection of 'wfScript' function for MW1.11 API integration.
- Added 'ClockTick' extension (added 'ClockTickEvent' hook)
- Added 'clocktick.php' script
- Added 'TaskScheduler' extension (requires 'ClockTick' extension / 'ClockTickEvent' generator such as 'clocktick.php' script)
- 